--- a/welcome.css
+++ b/welcome.css
@@ -58,7 +58,7 @@ button:hover {
 @media (max-width: 768px) {
   .welcome-screen {
       width: 90%;
-      height: auto;
+      height: 1000px;
       padding: 5%;
   }
 
