--- a/welcome.css
+++ b/welcome.css
@@ -120,5 +120,15 @@ button:hover {
     }
   }
 
+  #preloader{
+    background: #6d44cd url(loading.gif) no-repeat center center;
+    background-size: 30%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;  
+    z-index: 100;
+
+  }
+
   
   
