--- a/styles.css
+++ b/styles.css
@@ -145,21 +145,17 @@ header {
     }
 }
 
-title {
+h1 {
     font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-size: 30px;
+    font-weight: 300px;
+    font-size: 28px;
     margin: 0;
-    color: #333;
-    transition: color 0.3s, transform 0.3s; 
-    animation: coolAnimation 2s infinite alternate; 
-  }
-  
-  title:hover {
-    color: #505168; /* Text color on hover */
-    transform: scale(1.1); /* Scale up the text on hover */
-  }
+    transition: color 0.3s; /* Smooth text color transition */
+}
 
+h1:hover {
+    color: #505168; /* Text color on hover */
+}
 
 
 
