--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,13 @@ header {
 
 .nav h1 {
     font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-size: 32px;
+    font-weight: 500;
+    font-size: 60px;
     color: #333;
+}
+
+.nav h1:hover{
+    color: #FFF;
 }
 
 .create-box {
@@ -115,7 +119,7 @@ header {
 }   
 
 .flashcard h2{
-    font-size: 1rem;
+    font-size: 20px;
 }
 
 @media(max-width:768px){
@@ -153,9 +157,7 @@ h1 {
     transition: color 0.3s; 
 }
 
-h1:hover {
-    color: #505168; 
-}
+
 
 
 .delete-button {
@@ -169,6 +171,10 @@ h1:hover {
     position: absolute;
     margin-left: 230px;
     margin-bottom: 165px;
+    width: 26.5px;
+    height: 25px;
+    text-align: center;
+    font-size: 12px;
 }
 
 .delete-button:hover {
